fixed alignment issues

--- a/style.css
+++ b/style.css
@@ -9,13 +9,31 @@ body {
     padding: 15px;
     overflow: hidden;
     width: 30%;
+    font-size: xx-large;
   
 }
 
 .names, .prices, .images {
-    max-width: fit-content;
-    border: 1px solid green;
+    width: 20%;
+    /* border: 1px solid green; */
+    margin-bottom: 4px;
+    
    
+}
+
+.names, .prices {
+    margin-right: 4px;
+    
+}
+
+.product {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.prices {
+    padding-left: 50px;
 }
 
 /* .names {
